@@ -46,6 +46,11 @@
         * vignettes/Rcpp-extending.Rmd: Idem
         * vignettes/Rcpp-attributes.Rmd: Idem
 
+2017-09-18  Daniel C. Dillon  <dcdillon@gmail.com>
+        * inst/include/Rcpp/vector/MatrixRow.h: Added cbegin() and cend() to
+        the class along with a framework for proper const-correctness in the
+        future.
+
 2017-09-03  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION (Version, Date): Roll minor version
